tests/ui/feature-gates/feature-gate-arbitrary-self-types.stderr
error[E0307]: invalid `self` parameter type: `Ptr<Bar>`
  --> $DIR/feature-gate-arbitrary-self-types.rs:20:18
   |
LL |     fn foo(self: Ptr<Self>) {}
   |                  ^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`);
           alternatively, consider implement `Receiver` trait on the type of `self`, where applicable

error[E0307]: invalid `self` parameter type: `Box<Ptr<Bar>>`
  --> $DIR/feature-gate-arbitrary-self-types.rs:24:18
   |
LL |     fn bar(self: Box<Ptr<Self>>) {}
   |                  ^^^^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`);
           alternatively, consider implement `Receiver` trait on the type of `self`, where applicable

error[E0307]: invalid `self` parameter type: `Ptr<Self>`
  --> $DIR/feature-gate-arbitrary-self-types.rs:14:18
   |
LL |     fn foo(self: Ptr<Self>);
   |                  ^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`);
           alternatively, consider implement `Receiver` trait on the type of `self`, where applicable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0307`.
